<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MostrarDatosActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introducci_n_a_recyclerview"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_est"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_est"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>

</LinearLayout>