<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btnAgregarContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_contacto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.3"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btnMostrarLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_lista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAgregarContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btnMostrarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desarrollador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMostrarLista"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
